# OpenMP-exampls

./: CMakeLists.txt  README.md  test.cpp
execution_synchronization/: CMakeLists.txt  demo01.cpp
loop_constructs/: CMakeLists.txt  demo01.cpp  demo02.cpp  demo03.cpp
parallel_constructs/: CMakeLists.txt  demo01.cpp  demo02.cpp
private_firstprivate_shared_clauses/: CMakeLists.txt  demo01.cpp
reduction/: CMakeLists.txt  demo01.cpp
task_constructs/: CMakeLists.txt  demo01.cpp
thread_cancellation/: CMakeLists.txt  demo01.cpp
thread_safety/: CMakeLists.txt  demo01.cpp  demo02.cpp  demo03.cpp
